--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "typescript": "5.6.3"
   },
   "lint-staged": {
-    "*": "prettier --write"
+    "*.{css,html,json,js,jsx,mdx,ts,tsx}": "prettier --write"
   }
 }
