--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "prettier --check .",
     "format": "prettier --write .",
-    "prepare": "husky init"
+    "prepare": "husky || true"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
