--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -31,11 +31,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: pnpm-lock.yaml
+          cache: 'pnpm'
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
