--- a/.github/workflows/deploy-portal-s3.yml
+++ b/.github/workflows/deploy-portal-s3.yml
@@ -73,7 +73,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-session-name: gha-portal-staging-${{ github.run_id }}  
 
-      # ✅ Sync non-HTML (cache-forever)
+      # Sync non-HTML (cache-forever)
       - name: Upload static assets (cacheable)
         run: |
           aws s3 sync ./out s3://${{ env.S3_BUCKET }} \
@@ -81,7 +81,7 @@ jobs:
             --exclude "*.html" \
             --cache-control "public,max-age=31536000,immutable"
 
-      # ✅ Sync ALL HTML (no-cache) incl. nested */index.html
+      # Sync ALL HTML (no-cache) incl. nested */index.html
       - name: Upload HTML (no-cache)
         run: |
           aws s3 sync ./out s3://${{ env.S3_BUCKET }} \
@@ -89,26 +89,12 @@ jobs:
             --cache-control "no-cache" \
             --content-type "text/html"
 
-      # ✅ Ensure a ROOT index.html when build uses a basePath (GH Pages style)
-      - name: Ensure root index.html
+      # ⚠️ If you have many HTML pages, consider "/*" here.
+      - name: Invalidate CloudFront (index only)
         run: |
-          if [ -f out/legume-grain-portal/index.html ]; then
-            aws s3 cp out/legume-grain-portal/index.html s3://${{ env.S3_BUCKET }}/index.html \
-              --cache-control "no-cache" --content-type "text/html"
-          fi
-
-      # ✅ Invalidate CF: always root; if basePath exists, also invalidate that prefix
-      - name: Invalidate CloudFront
-        run: |
-          if [ -f out/legume-grain-portal/index.html ]; then
-            aws cloudfront create-invalidation \
-              --distribution-id ${{ env.CF_DISTRIBUTION_ID }} \
-              --paths "/index.html" "/legume-grain-portal/*"
-          else
-            aws cloudfront create-invalidation \
-              --distribution-id ${{ env.CF_DISTRIBUTION_ID }} \
-              --paths "/index.html"
-          fi
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ env.CF_DISTRIBUTION_ID }} \
+            --paths "/index.html"
 
   deploy-production:
     name: Deploy to PRODUCTION (requires approval)
