--- a/.github/workflows/deploy-portal-s3.yml
+++ b/.github/workflows/deploy-portal-s3.yml
@@ -56,7 +56,9 @@ jobs:
     if: |
       github.event_name == 'push' ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging')
-    environment: staging
+    environment: 
+      name: staging
+      url: https://portal.staging.legumegrainomics.org
     env:
       AWS_REGION: "ap-southeast-2"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -101,7 +103,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production'
-    environment: production   # protect this env to require approval
+    environment: 
+      name: production   # protect this env to require approval
+      url: https://legumegrainomics.org
     env:
       AWS_REGION: "ap-southeast-2"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
