--- a/.github/workflows/deploy-portal-s3.yml
+++ b/.github/workflows/deploy-portal-s3.yml
@@ -102,7 +102,9 @@ jobs:
     name: Deploy to PRODUCTION (requires approval)
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production'
+    if: |
+      (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
     environment: 
       name: production   # protect this env to require approval
       url: https://legumegrainomics.org
