--- a/.github/workflows/deploy-portal-s3.yml
+++ b/.github/workflows/deploy-portal-s3.yml
@@ -13,7 +13,7 @@ on:
 
 permissions:
   contents: read
-  id-token: write   # AWS OIDC
+  id-token: write # AWS OIDC
 
 concurrency:
   group: portal-s3-${{ github.ref || github.run_id }}
@@ -56,7 +56,7 @@ jobs:
     if: |
       github.event_name == 'push' ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging')
-    environment: 
+    environment:
       name: staging
       url: https://portal.staging.legumegrainomics.org
     env:
@@ -71,9 +71,11 @@ jobs:
       - name: Configure AWS (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GerminateGithubActionsOIDCRole-staging
+          role-to-assume:
+            arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID
+            }}:role/GerminateGithubActionsOIDCRole-staging
           aws-region: ${{ env.AWS_REGION }}
-          role-session-name: gha-portal-staging-${{ github.run_id }}  
+          role-session-name: gha-portal-staging-${{ github.run_id }}
 
       # Sync non-HTML (cache-forever)
       - name: Upload static assets (cacheable)
@@ -105,8 +107,8 @@ jobs:
     if: |
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
-    environment: 
-      name: production   # protect this env to require approval
+    environment:
+      name: production # protect this env to require approval
       url: https://legumegrainomics.org
     env:
       AWS_REGION: "ap-southeast-2"
@@ -120,9 +122,11 @@ jobs:
       - name: Configure AWS (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GerminateGithubActionsOIDCRole-production
+          role-to-assume:
+            arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID
+            }}:role/GerminateGithubActionsOIDCRole-production
           aws-region: ${{ env.AWS_REGION }}
-          role-session-name: gha-portal-prod-${{ github.run_id }}  
+          role-session-name: gha-portal-prod-${{ github.run_id }}
 
       - name: Upload static assets (cacheable)
         run: |
@@ -137,7 +141,6 @@ jobs:
             --exclude "*" --include "*.html" \
             --cache-control "no-cache" \
             --content-type "text/html"
-
 
       - name: Invalidate CloudFront (full)
         run: |
