--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.2",
     "@mdx-js/loader": "^3.1.0",
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.30.0",
